--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="D:\брекеты\samples\ru\Getting Started/site.html" class="navbar-brand">MovieGenerator</a>
+                    <a href="D:\брекеты\samples\ru\Getting Started/index.html" class="navbar-brand">MovieGenerator</a>
                     <a href="D:\брекеты\samples\ru\Getting Started/o_nas.html" class="nav-item nav-link">О нас</a>
                     <a href="D:\брекеты\samples\ru\Getting Started/donate.html" class="nav-item nav-link">Поддержать автора</a>
                 </div>
@@ -50,6 +50,7 @@
   </style>
 </head>
 <body background="C:\Users\szhum\Desktop\SULTAN@@/bm.gif">  
+<audio src="D:\брекеты\samples\ru\Getting Started/Песня AC_DC - Highway to Hell [ backingtrackx.com ].mp3" preload autoplay> </audio>
 <div class="text" id="text_here"></div>
 <div class="controls">
 <button type="button" class="btn btn-danger btn-sm" onclick="get_text(); ">Сгенерировать</button>
