--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     }
   </style>
 </head>
-<body background="C:\Users\szhum\Desktop\SULTAN@@/bm.gif">  
+<body>
+<div id="page" style="background- image:url(https://vk.com/doc252860512_628319495?hash=c86dc685105abb78c7&dl=7d8be55cbfdde8f631&wnd=1&module=im)">
 <audio src="D:\брекеты\samples\ru\Getting Started/Песня AC_DC - Highway to Hell [ backingtrackx.com ].mp3" preload autoplay> </audio>
 <div class="text" id="text_here"></div>
 <div class="controls">
