--- a/index.html
+++ b/index.html
@@ -48,12 +48,7 @@
       margin-right: 99px;
     }
   </style>
-<body background="『🔥CHLORINE🔥』Demon Slayer『AMV EDIT』4K_Trim.gif">
-<h1>Welcome to Edureka</h1>
-<p><a href="<a href="https://vk.com/doc252860512_628319495?hash=c86dc685105abb78c7&dl=7d8be55cbfdde8f631">Edureka.co</a></p>
-</body>
-</html>
-
+<body background="https://vk.com/doc252860512_628319495?hash=c86dc685105abb78c7&dl=7d8be55cbfdde8f631&wnd=1&module=im">  
 <audio src="D:\брекеты\samples\ru\Getting Started/Песня AC_DC - Highway to Hell [ backingtrackx.com ].mp3" preload autoplay> </audio>
 <div class="text" id="text_here"></div>
 <div class="controls">
