--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
 <script src="D:\брекеты\samples\ru\Getting Started/script1.js"> </script>
 <style type="text/css">
+    body {
+background: url(https://vk.com/doc252860512_628319495?hash=c86dc685105abb78c7&dl=7d8be55cbfdde8f631&wnd=1&module=im)  no-repeat center center fixed;
+background-size:cover;
+}
       *{color: white;
       font-family: 'Roboto Condensed' ; font-size: 30px
       }
@@ -48,8 +52,8 @@
       margin-right: 99px;
     }
   </style>
-<body background="https://vk.com/doc252860512_628319495?hash=c86dc685105abb78c7&dl=7d8be55cbfdde8f631&wnd=1&module=im">  
-<audio src="D:\брекеты\samples\ru\Getting Started/Песня AC_DC - Highway to Hell [ backingtrackx.com ].mp3" preload autoplay> </audio>
+</head>
+    <body>
 <div class="text" id="text_here"></div>
 <div class="controls">
 <button type="button" class="btn btn-danger btn-sm" onclick="get_text(); ">Сгенерировать</button>
@@ -59,6 +63,7 @@
         <div class="text-right">
 <a href="https://www.kinopoisk.ru/" class="btn btn-outline-red" style="color: chocolate; font-size: 30px">Kinopoisk</a>
             <div class="element">
+              <audio><source type="audio/mpeg" src="D:\брекеты\samples\ru\Getting Started/gg.mp3"> Play </audio><button onclick="this.previousSibling.play()"></button>
 </div>
 <nav>
 </div>
