--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-<script src="D:\брекеты\samples\ru\Getting Started/script1.js"> </script>
+<script src="https://github.com/noezee/noezeee.github.io/blob/b8521ba850ba6c39040c418f0bedc667e3feb2ac/script1.js"> </script>
 <style type="text/css">
     body {
 background: url(https://vk.com/doc252860512_628319495?hash=c86dc685105abb78c7&dl=7d8be55cbfdde8f631&wnd=1&module=im)  no-repeat center center fixed;
