--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="D:\брекеты\samples\ru\Getting Started/index.html" class="navbar-brand">MovieGenerator</a>
-                    <a href="D:\брекеты\samples\ru\Getting Started/o_nas.html" class="nav-item nav-link">О нас</a>
-                    <a href="D:\брекеты\samples\ru\Getting Started/donate.html" class="nav-item nav-link">Поддержать автора</a>
+                    <a href="D:\брекеты\samples\ru\Getting Started\site/index.html" class="navbar-brand">MovieGenerator</a>
+                    <a href="D:\брекеты\samples\ru\Getting Started\site/o_nas.html" class="nav-item nav-link">О нас</a>
+                    <a href="D:\брекеты\samples\ru\Getting Started\site/donate.html" class="nav-item nav-link">Поддержать автора</a>
                 </div>
             </div>
         </div>
@@ -31,7 +31,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-<script src="https://github.com/noezee/noezeee.github.io/blob/b8521ba850ba6c39040c418f0bedc667e3feb2ac/script1.js"> </script>
+<script src="D:\брекеты\samples\ru\Getting Started\site/script1.js"> </script>
 <style type="text/css">
     body {
 background: url(https://vk.com/doc252860512_628319495?hash=c86dc685105abb78c7&dl=7d8be55cbfdde8f631&wnd=1&module=im)  no-repeat center center fixed;
@@ -63,7 +63,7 @@ background-size:cover;
         <div class="text-right">
 <a href="https://www.kinopoisk.ru/" class="btn btn-outline-red" style="color: chocolate; font-size: 30px">Kinopoisk</a>
             <div class="element">
-              <audio><source type="audio/mpeg" src="D:\брекеты\samples\ru\Getting Started/gg.mp3"> Play </audio><button onclick="this.previousSibling.play()"></button>
+              <audio><source type="audio/mpeg" src="D:\брекеты\samples\ru\Getting Started\site/gg.mp3"> Play </audio><button onclick="this.previousSibling.play()"></button>
 </div>
 <nav>
 </div>
