--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-<script src="D:\брекеты\samples\ru\Getting Started\site/script1.js"> </script>
+<script src="Getting Started\site/script1.js"> </script>
 <style type="text/css">
     *{color: white;
       font-family: 'Roboto Condensed' ; font-size: 30px
@@ -109,16 +109,16 @@ background-size:cover;
 		<div class="collapse navbar-collapse" id="navbarText">
 			<ul class="d-flex navbar-nav h-100 w-100 text-md-center">
                 <li class="nav-item flex-fill">
-					<a class="nav-link hilite" href="D:\брекеты\samples\ru\Getting Started\index.html">Movie Generator</a>
+					<a class="nav-link hilite" href="Getting Started\index.html">Movie Generator</a>
 				</li>
 				<li class="nav-item flex-fill">
-					<a class="nav-link" href="D:\брекеты\samples\ru\Getting Started\site/o_nas.html">О нас</a>
+					<a class="nav-link" href="Getting Started\site/o_nas.html">О нас</a>
 				</li>
 				<li class="nav-item flex-fill">
-					<a class="nav-link" href="D:\брекеты\samples\ru\Getting Started\site/donate.html">Поддержать автора</a>
+					<a class="nav-link" href="Getting Started\site/donate.html">Поддержать автора</a>
 				</li>
                 	<li class="nav-item flex-fill">
-					<a class="nav-link" href="D:\брекеты\samples\ru\Getting Started\site/kont.html">Контакты</a>
+					<a class="nav-link" href="Getting Started\site/kont.html">Контакты</a>
 				</li>
 				<li class="nav-item flex-fill">
 					<a class="nav-link" href="#">Отзывы</a>
@@ -135,7 +135,7 @@ background-size:cover;
 <a type="button" class="btn btn-dark" onclick="get_text(); " >Сгенерировать</a>
     </p>
     <p class="mus">
-        <audio><source type="audio/mpeg" src="D:\брекеты\samples\ru\Getting Started\site/myzik.mp3"></audio><a onclick="this.previousSibling.play()">Play Music
+        <audio><source type="audio/mpeg" src="Getting Started\site/myzik.mp3"></audio><a onclick="this.previousSibling.play()">Play Music
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-music-player-fill" viewBox="0 0 16 16">
   <path d="M8 12a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
   <path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm1 2h6a1 1 0 0 1 1 1v2.5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1zm3 12a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
