--- a/Getting Started/site/kont.html
+++ b/Getting Started/site/kont.html
@@ -68,16 +68,16 @@ background-size:cover;
 		<div class="collapse navbar-collapse" id="navbarText">
 			<ul class="d-flex navbar-nav h-100 w-100 text-md-center">
                 <li class="nav-item flex-fill">
-					<a class="nav-link hilite" href="D:\брекеты\samples\ru\Getting Started\index.html">Movie Generator</a>
+					<a class="nav-link hilite" href="Getting Started\index.html">Movie Generator</a>
 				</li>
 				<li class="nav-item flex-fill">
-					<a class="nav-link" href="D:\брекеты\samples\ru\Getting Started\site/o_nas.html">О нас</a>
+					<a class="nav-link" href="Getting Started\site/o_nas.html">О нас</a>
 				</li>
 				<li class="nav-item flex-fill">
-					<a class="nav-link" href="D:\брекеты\samples\ru\Getting Started\site/donate.html">Поддержать автора</a>
+					<a class="nav-link" href="Getting Started\site/donate.html">Поддержать автора</a>
 				</li>
                 	<li class="nav-item flex-fill">
-					<a class="nav-link" href="D:\брекеты\samples\ru\Getting Started\site/kont.html">Контакты</a>
+					<a class="nav-link" href="Getting Started\site/kont.html">Контакты</a>
 				</li>
 				<li class="nav-item flex-fill">
 					<a class="nav-link" href="#">Отзывы</a>
