--- a/Getting Started/site/donate.html
+++ b/Getting Started/site/donate.html
@@ -68,7 +68,7 @@ background-size:cover;
 		<div class="collapse navbar-collapse" id="navbarText">
 			<ul class="d-flex navbar-nav h-100 w-100 text-md-center">
                 <li class="nav-item flex-fill">
-					<a class="nav-link hilite" href="Getting Started\index.html">Movie Generator</a>
+					<a class="nav-link hilite" href="index.html">Movie Generator</a>
 				</li>
 				<li class="nav-item flex-fill">
 					<a class="nav-link" href="Getting Started\site/o_nas.html">О нас</a>
