--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	}
 }
      body {
-background: url(https://psv4.userapi.com/c532036/u252860512/docs/d41/73381ad4c444/luna.gif?extra=u6lfR4NO9C6Pqn0vUKAaMlJGD0DHC5MDPv54rhiEMxD2a7em_HPuXD5o_yDHpcxI2zlj1-2fmS_QmRjbEuyj0p4CXrxa47NwlV2x3xIQje0A6QtE4JFMTPIngI9C-5NdBYZeFlT7oRU1VRQJ7iTWMcS80Q)  no-repeat center center fixed;
+background: url(https://disk.yandex.kz/i/8qzpyKEW11HKTg)  no-repeat center center fixed;
 background-size:cover;
 }
     
